error_templates/java/test_files/public_class_filename_mismatch_error/test.txt
template: "Java.PublicClassFilenameMismatchError"
---
Wrong.java:1: error: class Right is public, should be declared in a file named Right.java
    public class Right {
            ^
    1 error
===
template: "Java.PublicClassFilenameMismatchError"
---
Public class "Right" does not match the name of the file which is "Wrong.java". Rename it to "Right.java"
